[tool.poetry]
name = "node-role-label-controller"
version = "0.1.0"
description = ""
authors = ["Ohad David <ohad.david@google.com>"]

[tool.poetry.dependencies]
python = "^3.7"
kopf = "0.27"
kubernetes = "^11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
